# CPPChatApplication

./: LICENSE.md  LINUX_CLIENT_EXECUTABLE_GUI  LINUX_SERVER_EXECUTABLE_CLI  README.txt  installWxWidgets.sh
src/: App.cpp  CLIENT_INTERFACE.cpp  CLIENT_INTERFACE.h  CMakeLists.txt  LoginScreen.cpp  MainFrame.cpp  MainFrame.h  SimpleClient.cpp  SimpleServer.cpp  custom_messages.h  net_All.h  net_client.h  net_common.h  net_connection.h  net_message.h  net_server.h  net_tsqueue.h  test.cpp  timer.cpp  timer.h
